--- a/logfile-web/src/components/Searchbar/Searchbar.scss
+++ b/logfile-web/src/components/Searchbar/Searchbar.scss
@@ -1,9 +1,11 @@
-.searchbar-container {
-  .input {
-    font-size: 100,
+.searchbar {
+  &__container {
+    width: 200px;
+    padding: 15px;
   }
-}
 
-.searchbar-input {
-  font-size: 100,
+  &__input {
+    font-size: 100;
+    background-color: rgba(250, 222, 214, 0.9);
+  }
 }
