--- a/logfile-web/src/components/Searchbar/Searchbar.scss
+++ b/logfile-web/src/components/Searchbar/Searchbar.scss
@@ -1,11 +1,22 @@
 .searchbar {
   &__container {
-    width: 200px;
-    padding: 15px;
+    display: flex;
+    flex-direction: row;
   }
 
   &__input {
-    font-size: 100;
+    margin: 5px;
+    font-size: medium;
     background-color: rgba(250, 222, 214, 0.9);
+  }
+
+  &__button {
+    margin: 5px;
+    width: 60px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: black;
+    font-size: medium;
+    color: white;
   }
 }
