--- a/logfile-web/src/components/ContentView/ContentView.scss
+++ b/logfile-web/src/components/ContentView/ContentView.scss
@@ -1,18 +1,35 @@
 .content-view {
   &__container {
-    display: flex;
-    flex-direction: column;
-    border: 1px brown solid;
+    width: 1080;
   }
 
   &__content {
-    display: flex;
-    flex-direction: row;
+    width: 100%;
+    height: 400px;
     margin: 5px;
+    border: 1px grey solid;
+    border-spacing: 0px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
     font-size: medium;
-  }
 
-  &__line-number {
-    margin-right: 5px;
+    &__cell {
+      height: 60px;
+      padding: 10px;
+      margin-right: 10px;
+
+        &__content {
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+
+        &__line-number {
+          width: 40px;
+          border-right: 1px grey solid;
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+    }
   }
 }
