--- a/logfile-web/src/components/Searchbar/Searchbar.scss
+++ b/logfile-web/src/components/Searchbar/Searchbar.scss
@@ -4,19 +4,17 @@
     flex-direction: row;
   }
 
-  &__input {
-    margin: 5px;
-    font-size: medium;
-    background-color: rgba(250, 222, 214, 0.9);
-  }
-
   &__button {
-    margin: 5px;
-    width: 60px;
-    border: 1px solid black;
+    margin-left: 5px;
+    padding: 5px;
+    border: 0px;
     border-radius: 5px;
-    background-color: black;
-    font-size: medium;
-    color: white;
+    font-size: large;
+    color: darkslategrey;
+    background: lightblue;
+
+    &:disabled {
+      background: grey;
+    }
   }
 }
