Add error handling view, welcome view styling.

--- a/logfile-web/src/components/LogfileView/LogfileView.scss
+++ b/logfile-web/src/components/LogfileView/LogfileView.scss
@@ -18,6 +18,7 @@
         font-size: small;
         background: lightcoral;
         border: 0px;
+        cursor: pointer;
 
         &:disabled {
           background: lightgray;
