--- a/logfile-web/src/components/Searchbar/Searchbar.scss
+++ b/logfile-web/src/components/Searchbar/Searchbar.scss
@@ -10,10 +10,12 @@
     border: 0px;
     border-radius: 5px;
     font-size: large;
-    color: darkslategrey;
+    color: rgb(25, 27, 27);
     background: lightblue;
+    cursor: pointer;
 
     &:disabled {
+      color: rgb(37, 41, 41);
       background: grey;
     }
   }
