Add cache implementation.

--- a/logfile-web/src/components/InputText/InputText.scss
+++ b/logfile-web/src/components/InputText/InputText.scss
@@ -6,6 +6,7 @@
       border: 0px;
       border-radius: 6px;
       font-size: x-large;
+      font-weight: 300;
       background: lightblue;
       color: #404347;
       outline: none;
