--- a/logfile-web/src/components/ErrorView/ErrorView.scss
+++ b/logfile-web/src/components/ErrorView/ErrorView.scss
@@ -23,6 +23,7 @@
     }
 
     &__description {
+      margin-top: 5px;
       font-size: small;
       font-weight: lighter;
       color: #e8eaed;
