--- a/logfile-web/src/components/LandingView/LandingView.scss
+++ b/logfile-web/src/components/LandingView/LandingView.scss
@@ -22,6 +22,8 @@
     }
 
     &__description {
+      width: 500px;
+      margin-top: 5px;
       font-size: small;
       font-weight: lighter;
       color: rgb(48, 49, 51);
