--- a/logfile-web/src/components/LoadingView/LoadingView.scss
+++ b/logfile-web/src/components/LoadingView/LoadingView.scss
@@ -28,6 +28,7 @@
     }
 
     &__description {
+      margin-top: 5px;
       font-size: small;
       font-weight: lighter;
       color: rgb(224, 216, 216);
